# rl_dda

./: TODO.txt  index.html  pyproject.toml
client/: pyproject.toml  pyvenv.cfg  rye-venv.json
client/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py
client/src/: input.py
references/: CLASS_DIAGRAM.md  DEVELOPER_GUIDE.md  PROJECT_STRUCTURE.md
server/: run_tests.py  setup_mongo_replset.py  test_game_flow.py  test_mongodb_connection.py
server/src/api/: app.py
server/src/api/routes/: __init__.py  dda_actions.py  game.py  session.py  sessions.py
server/src/core/: __init__.py
server/src/db/: connection.py
server/src/tests/: __init__.py  test_db.py
src/: ABOUT_AUDIO_MODULE.md  WIP_README.md  __init__.py  audio.py  dataset_collector.py  direct_input.py  enemy_a.py  enemy_b.py  enemy_c.py  enemy_d.py  enemy_e.py  enemy_f.py  enemy_g.py  enemy_h.py  enemy_i.py  enemy_j.py  enemy_k.py  enemy_l.py  enemy_m.py  enemy_n.py  enemy_o.py  enemy_p.py  enemy_shot.py  enemy_spawn.py  explosion.py  game.py  game.pyxapp  game_state_stage.py  game_vars.py  hud.py  index.html  input.py  main.py  monospace_bitmap_font.py  player_shot.py  powerup.py  run_agent_in_game.py  stage_background.py
src/components/: TODO.md  __init__.py  enemy.py  enemy_shot.py  entity_types.py  player.py  sprite.py
src/config/: TODO.md  __init__.py  const.py  game_config.py
src/config/app/: __init__.py  app.py  constants.py  test_app_config.py
src/config/colors/: __init__.py  color_palette.py  constants.py  test_color_palette.py
src/config/enemy/: __init__.py  enemy_config.py
src/config/music/: __init__.py  music_config.py  test_music_config.py
src/config/paths/: __init__.py  paths.py  test_paths.py
src/config/player/: __init__.py  player_config.py  test_player_config.py
src/config/render/: __init__.py  display_config.py  test_display_config.py
src/config/score/: score_config.py  test_score.py
src/config/sound/: __init__.py  sound_config.py  sound_type.py  test_sound_config.py  test_sound_type.py
src/config/stage/: __init__.py  stage_num.py  test_state_num.py
src/data_collection/: collect_data.py  convert_labels_to_yolo.py  label_generator.py  screen_capture.py  split_yolo_dataset.py
src/object_detection/: __init__.py  game_detector.py
src/rl/: README.md  __init__.py  environment.py  evaluate.py  fixed_environment.py  fixed_random_agent.py  game_state_detector.py  run_agent.py  train.py  utils.py
src/rl/agents/: __init__.py  base_agent.py  random_agent.py
src/scripts/: decode_base64.py
src/states/game_state/: README.md  __init__.py  game_state_complete.py  game_state_stage.py  game_state_titles.py
tests/config/score/: test_score_config.py
vortexion/src/: player.py
vortextion_server/: README.md  create_test_data.py  package-lock.json  package.json  pyproject.toml  run_db_tests.py  test_mongodb.py
vortextion_server/config/: mongod.conf
vortextion_server/src/: __init__.py  config.py  main.py
vortextion_server/src/api/: __init__.py  auth.py
vortextion_server/src/api/models/: session.py
vortextion_server/src/api/routes/: dda_action.py  logs.py  user_action.py  user_actions.py
vortextion_server/src/api/schemas/: log.py  session.py  user_action.py
vortextion_server/src/core/: config.py  logging.py
vortextion_server/src/db/: __init__.py  mongodb.py
vortextion_server/src/db/models/: log.py
vortextion_server/src/db/repositories/: __init__.py
(+12 files in other folders)
