[project]
name = "rl-dda-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devforplus", email = "devforplus@gmail.com" }
]
dependencies = [
    "pyxel>=2.3.18",
    "pipe>=2.2",
    "toolz>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test"] 
