[project]
name = "vortextion-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devforplus", email = "devforplus@gmail.com" }
]
dependencies = [
    "prisma>=0.15.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.3",
    "aiohttp>=3.11.18",
    "pymongo>=4.12.0",
    "motor>=3.7.0",
    "jwt>=1.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "python -m src.main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
